basic function testing
- add javascript file
- html structure modify

--- a/index.html
+++ b/index.html
@@ -11,28 +11,38 @@
       <header>
         <h1>What should I eat?</h1>
       </header>
-      <button>Quick Generate</button>
+      <button id="generate">Quick Generate</button>
       <section class="container">
         <h2>Your Meal</h2>
-        <div class="card">
+        <div class="card" id="main">
           <div class="imgBox">
             <img src="" alt="" />
           </div>
           <h3>Main</h3>
+          <h4>Placeholder</h4>
+          <a href="#" target="_blank" class="btn">WHERE TO EAT</a>
+          <a href="#" target="_blank" class="btn">Make it myself</a>
         </div>
-        <div class="card">
+        <div class="card" id="side">
           <div class="imgBox">
             <img src="" alt="" />
           </div>
           <h3>Side</h3>
+          <h4 id="side">Placeholder</h4>
+          <a href="#" target="_blank" class="btn">WHERE TO EAT</a>
+          <a href="#" target="_blank" class="btn">Make it myself</a>
         </div>
-        <div class="card">
+        <div class="card" id="drinks">
           <div class="imgBox">
             <img src="" alt="" />
           </div>
-          <h3>Drink</h3>
+          <h3>Drinks</h3>
+          <h4>Placeholder</h4>
+          <a href="#" target="_blank" class="btn">WHERE TO EAT</a>
+          <a href="#" target="_blank" class="btn">Make it myself</a>
         </div>
       </section>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
