--- a/index.html
+++ b/index.html
@@ -5,41 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>What should I eat?</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
   </head>
   <body>
-    <main>
-      <header>
+    <main class="container my-5">
+      <header class="container-md border">
         <h1>What should I eat?</h1>
       </header>
-      <button id="generate">Quick Generate</button>
-      <section class="container">
+      <button id="generate" class="btn btn-dark btn-lg">Quick Generate</button>
+
+      <section class="row" id="container">
         <h2>Your Meal</h2>
-        <div class="card" id="main">
-          <div class="imgBox">
-            <img src="" alt="" />
+        <div class="card col-lg-4 col-md-3" id="main">
+          <div class="imgBox"></div>
+          <div class="card-body">
+            <h3 class="card-subtitle mb-2 text-muted">Main</h3>
+            <h4 class="card-title">Placeholder</h4>
+            <a href="#" target="_blank" class="btn btn-primary">WHERE TO EAT</a>
+            <a href="#" target="_blank" class="btn btn-outline-dark"
+              >Make it myself</a
+            >
           </div>
-          <h3>Main</h3>
-          <h4>Placeholder</h4>
-          <a href="#" target="_blank" class="btn">WHERE TO EAT</a>
-          <a href="#" target="_blank" class="btn">Make it myself</a>
         </div>
-        <div class="card" id="side">
-          <div class="imgBox">
-            <img src="" alt="" />
+        <div class="card col-lg-4 col-md-3" id="side">
+          <div class="imgBox"></div>
+          <div class="card-body">
+            <h3 class="card-subtitle mb-2 text-muted">Side</h3>
+            <h4 class="card-title">Placeholder</h4>
+            <a href="#" target="_blank" class="btn btn-primary">WHERE TO EAT</a>
+            <a href="#" target="_blank" class="btn btn-outline-dark"
+              >Make it myself</a
+            >
           </div>
-          <h3>Side</h3>
-          <h4 id="side">Placeholder</h4>
-          <a href="#" target="_blank" class="btn">WHERE TO EAT</a>
-          <a href="#" target="_blank" class="btn">Make it myself</a>
         </div>
-        <div class="card" id="drinks">
-          <div class="imgBox">
-            <img src="" alt="" />
+        <div class="card col-lg-4 col-md-3" id="drinks">
+          <div class="imgBox"></div>
+          <div class="card-body">
+            <h3 class="card-subtitle mb-2 text-muted">Drinks</h3>
+            <h4 class="card-title">Placeholder</h4>
+            <a href="#" target="_blank" class="btn btn-primary">WHERE TO EAT</a>
+            <a href="#" target="_blank" class="btn btn-outline-dark"
+              >Make it myself</a
+            >
           </div>
-          <h3>Drinks</h3>
-          <h4>Placeholder</h4>
-          <a href="#" target="_blank" class="btn">WHERE TO EAT</a>
-          <a href="#" target="_blank" class="btn">Make it myself</a>
         </div>
       </section>
     </main>
